[gd_scene load_steps=13 format=3 uid="uid://b8ijmsv4heh5c"]

[ext_resource type="Script" path="res://scripts/knight_enemy.gd" id="1_e14sh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_a0wat"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_3pb5r"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_he0xf"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_wpf21"]
[ext_resource type="Texture2D" uid="uid://dd26ejskh88dt" path="res://assets/enemy_knight.png" id="6_8ad5j"]
[ext_resource type="AudioStream" uid="uid://c5bjkpkhw11ov" path="res://audio/death.mp3" id="7_tfij0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_036q2"]
size = Vector2(27, 46)

[sub_resource type="Animation" id="Animation_0bqmu"]
resource_name = "despawning"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D/ProjeTilesEnemy1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_fveb0"]
resource_name = "dying"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D/ProjeTilesEnemy1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_wkseg"]
resource_name = "spawning"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D/ProjeTilesEnemy1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8r1p1"]
_data = {
"despawning": SubResource("Animation_0bqmu"),
"dying": SubResource("Animation_fveb0"),
"spawning": SubResource("Animation_wkseg")
}

[node name="knight_enemy" type="Node2D"]
script = ExtResource("1_e14sh")

[node name="EnemyStateChart" type="Node" parent="."]
script = ExtResource("2_a0wat")

[node name="CompoundState" type="Node" parent="EnemyStateChart"]
script = ExtResource("3_3pb5r")
initial_state = NodePath("spawning")

[node name="spawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_he0xf")

[node name="ToTravelling" type="Node" parent="EnemyStateChart/CompoundState/spawning"]
script = ExtResource("5_wpf21")
to = NodePath("../../travelling")
event = &"to_travelling"

[node name="travelling" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_he0xf")

[node name="ToDespawning" type="Node" parent="EnemyStateChart/CompoundState/travelling"]
script = ExtResource("5_wpf21")
to = NodePath("../../despawning")
event = &"to_despawning"

[node name="ToDying" type="Node" parent="EnemyStateChart/CompoundState/travelling"]
script = ExtResource("5_wpf21")
to = NodePath("../../dying")
event = &"to_dying"

[node name="dying" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_he0xf")

[node name="despawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_he0xf")

[node name="Path2D" type="Path2D" parent="."]

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
rotates = false
loop = false

[node name="ProjeTilesEnemy1" type="Sprite2D" parent="Path2D/PathFollow2D"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_8ad5j")
offset = Vector2(0, -10)

[node name="Area2D" type="Area2D" parent="Path2D/PathFollow2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Area2D"]
position = Vector2(2, -7)
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_036q2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8r1p1")
}

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_tfij0")
bus = &"fx"

[connection signal="state_entered" from="EnemyStateChart/CompoundState/spawning" to="." method="_on_spawning_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/travelling" to="." method="_on_travelling_state_entered"]
[connection signal="state_processing" from="EnemyStateChart/CompoundState/travelling" to="." method="_on_travelling_state_processing"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/dying" to="." method="_on_dying_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/despawning" to="." method="_on_despawning_state_entered"]
[connection signal="area_entered" from="Path2D/PathFollow2D/Area2D" to="." method="_on_area_2d_area_entered"]
